--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 name = "browsercookie-rs"
 version = "0.1.1"
 authors = ["Bharadwaj Machiraju <tunnelshade.in>"]
-edition = "2018"
+edition = "2021"
 repository = "https://github.com/tunnelshade/browsercookie-rs"
 documentation = "https://docs.rs/browsercookie-rs/"
 exclude = ["tests/resources/*"]
@@ -23,14 +23,15 @@ doc = false
 
 [dependencies]
 byteorder = "1.3.1"
-cookie = "0.11.0"
-dirs = "1.0"
+cookie = "0.16.0"
+dirs = "4.0.0"
 lz4 = "1.23.1"
 memmap = "0.7.0"
-rust-ini = "0.13.0"
+rust-ini ="0.18.0"
 serde = { version = "1.0.90", features = ["derive"]}
 serde_json = "1.0.39"
 regex = "1"
-clap = "2.33.0"
+clap = {version = "3.2.17", features = ["cargo"]}
 sqlite = "0.27.0"
 tempdir = "0.3.7"
+anyhow = "1.0.62"
